crates/djls-project/tests/snapshots/corpus__repos__django-6.1__django__contrib__admin__templatetags__admin_filters.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::to_object_display_value":
    kind: filter
    has_doc: false
  "filter::truncated_unordered_list":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "django.contrib.admin.templatetags.admin_filters::filter::truncated_unordered_list": required_argument
block_specs: {}
