crates/djls-project/tests/snapshots/corpus__repos__django-6.1__django__contrib__admin__templatetags__admin_list.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::admin_actions":
    kind: tag
    has_doc: false
  "tag::admin_list_filter":
    kind: tag
    has_doc: false
  "tag::change_list_object_tools":
    kind: tag
    has_doc: false
  "tag::date_hierarchy":
    kind: tag
    has_doc: false
  "tag::pagination":
    kind: tag
    has_doc: false
  "tag::paginator_number":
    kind: tag
    has_doc: false
  "tag::result_list":
    kind: tag
    has_doc: false
  "tag::search_form":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "django.contrib.admin.templatetags.admin_list::tag::admin_list_filter":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: cl
            requirement: required
            kind: Variable
          - name: spec
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "django.contrib.admin.templatetags.admin_list::tag::paginator_number":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: cl
            requirement: required
            kind: Variable
          - name: i
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
