crates/djls-project/tests/snapshots/corpus__repos__django-6.1__django__contrib__admin__templatetags__admin_urls.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "django.contrib.admin.templatetags.admin_urls::tag::add_preserved_filters":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: url
        required: true
        kind: Variable
        position: 0
      - name: popup
        required: false
        kind: Variable
        position: 1
      - name: to_field
        required: false
        kind: Variable
        position: 2
    as_var: strip
filter_arities:
  "django.contrib.admin.templatetags.admin_urls::filter::admin_urlname": required_argument
  "django.contrib.admin.templatetags.admin_urls::filter::admin_urlquote": no_argument
block_specs: {}
