crates/djls-project/tests/snapshots/corpus__repos__django-6.1__django__contrib__admin__templatetags__log.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "django.contrib.admin.templatetags.log::tag::get_admin_log":
    arg_constraints:
      - Min: 4
    required_keywords:
      - position:
          Forward: 2
        value: as
      - position:
          Forward: 4
        value: for_user
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 4
        message:
          Static: "'get_admin_log' statements require two arguments"
      - constraint:
          RequiredKeyword:
            position:
              Forward: 2
            value: as
        message:
          Static: "Second argument to 'get_admin_log' must be 'as'"
      - constraint:
          RequiredKeyword:
            position:
              Forward: 4
            value: for_user
        message:
          Static: "Fourth argument to 'get_admin_log' must be 'for_user'"
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
      - name: as
        required: true
        kind:
          Literal: as
      - name: arg3
        required: true
        kind: Variable
      - name: for_user
        required: true
        kind:
          Literal: for_user
    as_var: keep
filter_arities: {}
block_specs: {}
